--- a/css/scss/_media.scss
+++ b/css/scss/_media.scss
@@ -80,10 +80,10 @@
             }
 
             .images {
-                padding-left: 20px;
-                padding-right: 20px;
                 padding-bottom: 30px;
                 padding-top: 30px;
+                padding-left: 20px !important;
+                padding-right: 20px !important;
             }
 
             .hidden-desktop {
